--- a/CleanUI/src/main/res/layout/settings_row_check.xml
+++ b/CleanUI/src/main/res/layout/settings_row_check.xml
@@ -6,7 +6,7 @@
     android:orientation="horizontal">
 
     <TextView
-        android:id="@+id/tvTitle"
+        android:id="@+id/clean_ui_tvTitle"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"
@@ -16,7 +16,7 @@
 
 
     <androidx.appcompat.widget.AppCompatCheckBox
-        android:id="@+id/cb"
+        android:id="@+id/clean_ui_cb"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="16dp"
