--- a/CleanUI/src/main/res/layout/title_section.xml
+++ b/CleanUI/src/main/res/layout/title_section.xml
@@ -9,7 +9,7 @@
     >
 
     <TextView
-        android:id="@+id/tvTitle"
+        android:id="@+id/clean_ui_tvTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
 
