--- a/app/src/main/res/layout/activity_toolbar_sample.xml
+++ b/app/src/main/res/layout/activity_toolbar_sample.xml
@@ -7,7 +7,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context=".ToolbarSampleActivity"
-    android:background="@color/light_bg_contrast"
+    android:background="@color/clean_ui_light_bg_contrast"
     >
 
     <devjdelasen.com.cleanui.SimpleToolbar
@@ -16,9 +16,9 @@
         app:simple_toolbar_title="Left title + divider + tint icon"
         app:simple_toolbar_title_to_left="true"
         app:simple_toolbar_left_icon="@drawable/ic_back_arrow"
-        app:simple_toolbar_left_color="@color/title_default"
+        app:simple_toolbar_left_color="@color/clean_ui_title_default"
         app:simple_toolbar_right1_icon="@drawable/ic_done"
-        app:simple_toolbar_right1_color="@color/colorPrimary"
+        app:simple_toolbar_right1_color="@color/clean_ui_colorPrimary"
         android:layout_marginBottom="20dp"
         />
 
@@ -37,7 +37,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:simple_toolbar_title="Changed size, text style and color"
-        app:simple_toolbar_title_color="@color/colorPrimary"
+        app:simple_toolbar_title_color="@color/clean_ui_colorPrimary"
         app:simple_toolbar_title_style="italic"
         app:simple_toolbar_text_size="16"
         android:layout_marginBottom="20dp"
@@ -47,7 +47,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:simple_toolbar_title="Changed divider color"
-        app:simple_toolbar_divider_color="@color/icon_light"
+        app:simple_toolbar_divider_color="@color/clean_ui_icon_light"
         android:layout_marginBottom="20dp"
         />
 
@@ -55,16 +55,16 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:simple_toolbar_title="All icons"
-        app:simple_toolbar_divider_color="@color/icon_light"
+        app:simple_toolbar_divider_color="@color/clean_ui_icon_light"
         app:simple_toolbar_left_icon="@drawable/ic_back_arrow"
         app:simple_toolbar_right1_icon="@drawable/ic_chat_gradient"
         app:simple_toolbar_right2_icon="@drawable/ic_geo"
         app:simple_toolbar_right3_icon="@drawable/ic_done"
-        app:simple_toolbar_left_color="@color/subtitle_dark"
-        app:simple_toolbar_right1_color="@color/subtitle_dark"
-        app:simple_toolbar_right2_color="@color/subtitle_dark"
-        app:simple_toolbar_right3_color="@color/subtitle_dark"
-        app:simple_toolbar_title_color="@color/subtitle_dark"
+        app:simple_toolbar_left_color="@color/clean_ui_subtitle_dark"
+        app:simple_toolbar_right1_color="@color/clean_ui_subtitle_dark"
+        app:simple_toolbar_right2_color="@color/clean_ui_subtitle_dark"
+        app:simple_toolbar_right3_color="@color/clean_ui_subtitle_dark"
+        app:simple_toolbar_title_color="@color/clean_ui_subtitle_dark"
         app:simple_toolbar_title_to_left="true"
         android:layout_marginBottom="20dp"
         />
