--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#F52C82</color>
-    <color name="colorPrimaryDark">#F52C82</color>
-    <color name="colorAccent">#F52C82</color>
+    <color name="app_colorPrimary">#F52C82</color>
+    <color name="app_colorPrimaryDark">#F52C82</color>
+    <color name="app_colorAccent">#F52C82</color>
 
 
-    <color name="light_bg_contrast">#F8F8F8</color>
-    <color name="icon">#3F4A58</color>
-    <color name="icon_light">#CAD1DA</color>
+    <color name="app_white">#FFF</color>
+    <color name="app_light_bg_contrast">#F8F8F8</color>
+    <color name="app_icon">#3F4A58</color>
+    <color name="app_icon_light">#CAD1DA</color>
 </resources>
