Updated examples. Fixed bug. Changed names layouts

--- a/app/src/main/res/layout/activity_toolbar_sample.xml
+++ b/app/src/main/res/layout/activity_toolbar_sample.xml
@@ -13,21 +13,10 @@
     <devjdelasen.com.cleanui.SimpleToolbar
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:simple_toolbar_title="Left title + divider + tint icon"
-        app:simple_toolbar_title_to_left="true"
-        app:simple_toolbar_left_icon="@drawable/ic_back_arrow"
-        app:simple_toolbar_left_color="@color/clean_ui_title_default"
-        app:simple_toolbar_right1_icon="@drawable/ic_done"
-        app:simple_toolbar_right1_color="@color/clean_ui_colorPrimary"
-        android:layout_marginBottom="20dp"
-        />
-
-    <devjdelasen.com.cleanui.SimpleToolbar
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:simple_toolbar_title="Center + no divider + no tint icon"
+        app:simple_toolbar_title="No tint icon"
         app:simple_toolbar_title_to_left="false"
         app:simple_toolbar_left_icon="@drawable/ic_back_arrow"
+        app:simple_toolbar_left_color="@color/clean_ui_title_default"
         app:simple_toolbar_right1_icon="@drawable/ic_chat_gradient"
         app:simple_toolbar_hide_divider="false"
         android:layout_marginBottom="20dp"
@@ -36,8 +25,22 @@
     <devjdelasen.com.cleanui.SimpleToolbar
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        app:simple_toolbar_hide_divider="true"
+        app:simple_toolbar_title="No divider and tint icon"
+        app:simple_toolbar_title_to_left="true"
+        app:simple_toolbar_left_icon="@drawable/ic_back_arrow"
+        app:simple_toolbar_left_color="@color/clean_ui_title_default"
+        app:simple_toolbar_right1_icon="@drawable/ic_geo"
+        app:simple_toolbar_right1_color="@color/clean_ui_colorPrimary"
+        android:layout_marginBottom="20dp"
+        />
+
+    <devjdelasen.com.cleanui.SimpleToolbar
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         app:simple_toolbar_title="Changed size, text style and color"
         app:simple_toolbar_title_color="@color/clean_ui_colorPrimary"
+        app:simple_toolbar_right1_icon="@drawable/ic_options"
         app:simple_toolbar_title_style="italic"
         app:simple_toolbar_text_size="16"
         android:layout_marginBottom="20dp"
@@ -47,6 +50,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:simple_toolbar_title="Changed divider color"
+        app:simple_toolbar_title_color="@color/clean_ui_subtitle_dark"
+        app:simple_toolbar_left_icon="@drawable/ic_chat_gradient"
         app:simple_toolbar_divider_color="@color/clean_ui_icon_light"
         android:layout_marginBottom="20dp"
         />
