--- a/app/src/main/res/layout/activity_toolbar_sample.xml
+++ b/app/src/main/res/layout/activity_toolbar_sample.xml
@@ -75,6 +75,13 @@
         android:layout_marginBottom="20dp"
         />
 
+    <devjdelasen.com.cleanui.SimpleToolbar
+        android:id="@+id/simpleToolbarProgrammatically"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="20dp"
+        />
+
 
 
 </LinearLayout>
