Added action dialog

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,6 +5,7 @@
     <color name="app_colorAccent">#F52C82</color>
 
 
+    <color name="app_colorSeconday">#03A9F4</color>
     <color name="app_white">#FFF</color>
     <color name="app_light_bg_contrast">#F8F8F8</color>
     <color name="app_icon">#3F4A58</color>
