--- a/CleanUI/src/main/res/layout/action_dialog.xml
+++ b/CleanUI/src/main/res/layout/action_dialog.xml
@@ -2,11 +2,11 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/clean_ui_llRoot"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
     android:background="@drawable/dialog_bg"
-
 
     android:paddingStart="16dp"
     android:paddingEnd="16dp"
@@ -29,6 +29,7 @@
         android:textSize="18dp"
         tools:text="@tools:sample/full_names"
         android:textAllCaps="true"
+        android:textStyle="bold"
         android:textColor="@color/clean_ui_title_default"
         />
 
@@ -63,6 +64,7 @@
         android:textColor="@color/clean_ui_white"
         android:text="Lorem"
         android:textAllCaps="true"
+        android:textStyle="bold"
         />
 
     <TextView
@@ -75,7 +77,7 @@
         android:gravity="center"
 
         android:textSize="18dp"
-        android:text="Dismiss"
+        android:textColor="@color/clean_ui_subtitle_dark"
         />
 
 
