--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,10 +2,10 @@
 <resources>
     <color name="app_colorPrimary">#F52C82</color>
     <color name="app_colorPrimaryDark">#F52C82</color>
-    <color name="app_colorAccent">#F52C82</color>
+    <color name="app_colorAccent">#F63A8B</color>
 
 
-    <color name="app_colorSeconday">#03A9F4</color>
+    <color name="app_colorSeconday">#48E4EA</color>
     <color name="app_white">#FFF</color>
     <color name="app_light_bg_contrast">#F8F8F8</color>
     <color name="app_icon">#3F4A58</color>
