--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,7 +20,7 @@
         app:layout_constraintTop_toTopOf="parent"
 
         app:simple_toolbar_hide_divider="true"
-        app:simple_toolbar_title="Title"
+        app:simple_toolbar_title="CleanUI"
         app:simple_toolbar_left_icon="@drawable/ic_back_arrow"
         app:simple_toolbar_title_color="@color/app_icon"
         app:simple_toolbar_left_color="@color/app_icon"
@@ -66,145 +66,23 @@
                     app:settings_row_title="Open samples calendars"
                     />
 
-            </devjdelasen.com.cleanui.TitleSection>
-
-
-            <devjdelasen.com.cleanui.TitleSection
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="#FFF"
-                android:layout_marginTop="12dp"
-                app:title_section_title="Title section"
-                app:title_section_title_style="bold"
-                app:title_section_title_color="@color/app_colorPrimary"
-                >
-
-                <TextView
+                <devjdelasen.com.cleanui.settingsRow.SettingsRowAction
+                    android:id="@+id/settingsSettings"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="Just a long text inside a TitleSection view. You can add here any view you like."
-                    android:layout_marginStart="16dp"
-                    android:layout_marginEnd="16dp"
-                    android:layout_marginBottom="12dp"
-                    android:textColor="@color/clean_ui_title_default"
-                    />
-
-            </devjdelasen.com.cleanui.TitleSection>
-
-            <devjdelasen.com.cleanui.TitleSection
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="#FFF"
-                android:layout_marginTop="12dp"
-                app:title_section_title="About"
-                app:title_section_title_style="normal"
-                app:title_section_title_color="@color/app_colorPrimary"
-                >
-
-                <devjdelasen.com.cleanui.settingsRow.SettingsRowSubtext
-                    android:id="@+id/settingsVersion"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    app:settings_row_title="Version"
-                    app:settings_row_subtitle="v2.15.8"
+                    app:settings_row_title="Open samples settings"
                     />
 
                 <devjdelasen.com.cleanui.settingsRow.SettingsRowAction
-                    android:id="@+id/settingsTerms"
+                    android:id="@+id/settingsActionDialog"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    app:settings_row_title="Terms and conditions"
-                    />
-
-                <devjdelasen.com.cleanui.settingsRow.SettingsRowAction
-                    android:id="@+id/settingsPrivacyPolicy"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    app:settings_row_title="Privacy policy"
+                    app:settings_row_title="Show dialog"
                     />
 
             </devjdelasen.com.cleanui.TitleSection>
 
-            <devjdelasen.com.cleanui.TitleSection
-                android:id="@+id/blocksTitleSection"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="#FFF"
-                android:layout_marginTop="12dp"
-                app:title_section_title="Users"
-                app:title_section_title_style="normal"
-                app:title_section_title_color="@color/app_colorPrimary"
-                >
 
-                <devjdelasen.com.cleanui.settingsRow.SettingsRowAction
-                    android:id="@+id/settingsBlocks"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    app:settings_row_title="Blocks"
-                    />
-
-            </devjdelasen.com.cleanui.TitleSection>
-
-            <devjdelasen.com.cleanui.TitleSection
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="#FFF"
-                android:layout_marginTop="12dp"
-                app:title_section_title="Notifications"
-                app:title_section_title_style="normal"
-                app:title_section_title_color="@color/app_colorPrimary"
-                >
-
-
-                <devjdelasen.com.cleanui.settingsRow.SettingsRowCheckBox
-                    android:id="@+id/settingsDisplayNotis"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    app:settings_row_title="Display notifications"
-                    />
-
-                <devjdelasen.com.cleanui.settingsRow.SettingsRowCheckBox
-                    android:id="@+id/settingsSound"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    app:settings_row_title="Sound on"
-                    />
-
-            </devjdelasen.com.cleanui.TitleSection>
-
-            <devjdelasen.com.cleanui.TitleSection
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="#FFF"
-                android:layout_marginTop="12dp"
-                app:title_section_title="About"
-                app:title_section_title_style="normal"
-                app:title_section_title_color="@color/app_colorPrimary"
-                >
-
-                <devjdelasen.com.cleanui.settingsRow.SettingsRowSubtext
-                    android:id="@+id/settingsSubtextProgrammatically"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    app:settings_row_title="From code"
-                    app:settings_row_subtitle="Subtext"
-                    />
-
-                <devjdelasen.com.cleanui.settingsRow.SettingsRowAction
-                    android:id="@+id/settingsActionProgrammatically"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    app:settings_row_title="Terms and conditions"
-                    />
-
-                <devjdelasen.com.cleanui.settingsRow.SettingsRowCheckBox
-                    android:id="@+id/settingsCheckboxProgrammatically"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    app:settings_row_title="Privacy policy"
-                    />
-
-            </devjdelasen.com.cleanui.TitleSection>
         </LinearLayout>
 
     </ScrollView>
