Added customization for tasks

--- a/CleanUI/src/main/res/layout/clean_ui_action_dialog.xml
+++ b/CleanUI/src/main/res/layout/clean_ui_action_dialog.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
-    android:background="@drawable/dialog_bg"
+    android:background="@drawable/clean_ui_dialog_bg"
 
     android:paddingStart="16dp"
     android:paddingEnd="16dp"
