--- a/CleanUI/src/main/res/values/attrs_top_calendar.xml
+++ b/CleanUI/src/main/res/values/attrs_top_calendar.xml
@@ -5,12 +5,16 @@
         <attr name="top_calendar_title_color" format="color"/>
         <attr name="top_calendar_main_text_color" format="color"/>
         <attr name="top_calendar_subtext_color" format="color"/>
-        <attr name="top_calendar_hide_divider" format="boolean"/>
         <attr name="top_calendar_hide_toolbar" format="boolean"/>
         <attr name="top_calendar_type">
             <flag name="horizontal" value="0" />
             <flag name="expanded" value="1" />
             <flag name="both" value="2" />
+        </attr>
+        <attr name="top_calendar_divider_type">
+            <flag name="none" value="0" />
+            <flag name="line" value="1" />
+            <flag name="shadow" value="2" />
         </attr>
     </declare-styleable>
 </resources>
