--- a/CleanUI/src/main/res/values/dimens.xml
+++ b/CleanUI/src/main/res/values/dimens.xml
@@ -2,4 +2,5 @@
 <resources>
     <dimen name="clean_ui_dialog_radius">10dp</dimen>
     <dimen name="clean_ui_dialog_button_radius">8dp</dimen>
+    <dimen name="clean_ui_shadow_divider_elevation">8dp</dimen>
 </resources>
