--- a/CleanUI/src/main/res/layout/clean_ui_tasks_simple_item_task_taskline.xml
+++ b/CleanUI/src/main/res/layout/clean_ui_tasks_simple_item_task_taskline.xml
@@ -1,15 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="horizontal">
+    android:orientation="horizontal"
+    >
 
-    <LinearLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/clean_ui_constraintLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
         android:layout_marginTop="10dp"
         android:layout_marginBottom="10dp"
         android:layout_marginEnd="14dp"
@@ -20,17 +22,110 @@
         >
 
         <View
+            android:id="@+id/clean_ui_vMarkColor"
             android:layout_width="3dp"
-            android:layout_height="match_parent"
+            android:layout_height="0dp"
             android:background="@drawable/clean_ui_taskline_task_color_mark_bg"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
             />
 
+
+        <TextView
+            android:id="@+id/clean_ui_tvHours"
+            style="@style/clean_ui_TasklineTimeTask"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/clean_ui_simple_task_side_inner_space"
+
+            app:layout_constraintBottom_toBottomOf="@+id/clean_ui_taskTopRightIcon"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/clean_ui_taskTopRightIcon"
+            tools:text="09:00 - 10:00"
+            />
+
+        <devjdelasen.com.cleanui.icons.CircleIcon
+            android:id="@+id/clean_ui_taskTopRightIcon"
+            android:layout_width="26dp"
+            android:layout_height="26dp"
+            android:rotation="90"
+            android:layout_marginTop="@dimen/clean_ui_simple_task_top_inner_space"
+            android:layout_marginBottom="12dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginEnd="@dimen/clean_ui_simple_task_side_inner_space"
+
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            />
+
+        <TextView
+            android:id="@+id/clean_ui_tvTitle"
+            style="@style/clean_ui_TasklineTitleTask"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            tools:text="Lorem ipsum dolor sit amet"
+            android:layout_marginTop="12dp"
+            android:layout_marginEnd="@dimen/clean_ui_simple_task_side_inner_space"
+            android:layout_marginStart="@dimen/clean_ui_simple_task_side_inner_space"
+
+            app:layout_constraintTop_toBottomOf="@+id/clean_ui_tvHours"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            />
+
+        <TextView
+            android:id="@+id/clean_ui_tvDescription"
+            style="@style/clean_ui_TasklineDescriptionTask"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="@dimen/clean_ui_simple_task_side_inner_space"
+            android:layout_marginStart="@dimen/clean_ui_simple_task_side_inner_space"
+            tools:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat."
+
+            app:layout_constraintTop_toBottomOf="@+id/clean_ui_tvTitle"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            />
+
+        <devjdelasen.com.cleanui.icons.CircleIcon
+            android:id="@+id/clean_ui_iconCategory"
+            android:layout_width="38dp"
+            android:layout_height="38dp"
+            android:layout_marginTop="16dp"
+            android:layout_marginEnd="14dp"
+            android:layout_marginStart="@dimen/clean_ui_simple_task_side_inner_space"
+            android:layout_marginBottom="@dimen/clean_ui_simple_task_bottom_inner_space"
+            app:circle_icon_icon="@drawable/icons8_origami_96"
+            app:circle_icon_tint_bg_color="@color/clean_ui_icon_bg"
+
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/clean_ui_tvDescription"
+            app:layout_constraintBottom_toBottomOf="parent"
+            />
+
+        <devjdelasen.com.cleanui.buttons.AccentButton
+            android:id="@+id/clean_ui_accentButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:layout_marginEnd="14dp"
+            app:circle_accent_button_text="#GoGoGo"
+            app:circle_accent_button_tint_color="@color/clean_ui_colorPrimary"
+
+            app:layout_constraintBottom_toBottomOf="@+id/clean_ui_iconCategory"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/clean_ui_iconCategory" />
+
+
+<!--
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:paddingTop="12dp"
+            android:paddingTop="112dp"
             android:paddingBottom="12dp"
             android:paddingStart="16dp"
             android:paddingEnd="16dp"
@@ -45,45 +140,8 @@
                 android:layout_marginBottom="12dp"
                 >
 
-                <TextView
-                    android:id="@+id/clean_ui_tvHours"
-                    style="@style/clean_ui_TasklineTimeTask"
-                    android:layout_width="0dp"
-                    android:layout_weight="1"
-                    android:layout_height="wrap_content"
-
-                    tools:text="09:00 - 10:00"
-                    />
-
-                <devjdelasen.com.cleanui.icons.CircleIcon
-                    android:id="@+id/clean_ui_taskTopRightIcon"
-                    android:layout_width="26dp"
-                    android:layout_height="26dp"
-                    android:rotation="90"
-                    />
-<!--
-
-                <ImageView
-                    android:layout_width="26dp"
-                    android:layout_height="26dp"
-                    android:padding="4dp"
-                    android:src="@drawable/clean_ui_ic_options"
-                    android:background="@drawable/clean_ui_icon_bg_circle"
-                    android:tint="@color/clean_ui_icon_with_bg"
-                    android:rotation="90"
-                    />
--->
 
             </LinearLayout>
-
-            <TextView
-                android:id="@+id/clean_ui_tvTitle"
-                style="@style/clean_ui_TasklineTitleTask"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="6dp"
-                tools:text="Lorem ipsum dolor sit amet"
-                />
 
             <TextView
                 android:id="@+id/clean_ui_tvDescription"
@@ -109,25 +167,18 @@
 
 
                     <devjdelasen.com.cleanui.icons.CircleIcon
+                        android:id="@+id/clean_ui_iconCategory"
                         android:layout_width="38dp"
                         android:layout_height="38dp"
                         app:circle_icon_icon="@drawable/icons8_origami_96"
                         app:circle_icon_tint_bg_color="@color/clean_ui_icon_bg"
                         />
 
-                    <!--
-                    <ImageView
-                        android:layout_width="38dp"
-                        android:layout_height="38dp"
-                        android:padding="4dp"
-                        android:src="@drawable/icons8_origami_96"
-                        android:background="@drawable/clean_ui_icon_bg_circle"
-                        />
--->
 
                 </LinearLayout>
 
                 <devjdelasen.com.cleanui.buttons.AccentButton
+                    android:id="@+id/clean_ui_accentButton"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     app:circle_accent_button_text="#GoGoGo"
@@ -144,7 +195,7 @@
                 android:layout_height="wrap_content"
                 />
 
-            <!--
+            &lt;!&ndash;
             - Total duration
             - Category with circle icon
             - Hashtag
@@ -158,11 +209,12 @@
             - Notification de important
             - Bottom section actions (e.g. iconos de enviar, comentar ?)
             - Lista enumerado
-            -->
+            &ndash;&gt;
 
         </LinearLayout>
+-->
 
-    </LinearLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 
 </LinearLayout>
